--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,3 +1,16 @@
+html {
+  scrollbar-width: none; 
+}
+
+
+html::-webkit-scrollbar {
+  display: none; 
+}
+
+.Decalage{
+  margin-left: 60px;
+}
+
 .movies-list {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
@@ -16,7 +29,40 @@
   color: #333;
 }
 
-.ImageContainer{
+.ImageContainer {
   width: 400px;
-  height:300px
+  height: 300px;
+}
+
+.arrow {
+  position: absolute;
+  height: 25px;
+  width: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #333;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 2;
+  cursor: pointer;
+}
+
+.next {
+  right: 0;
+  background-image: url('../images/Right_arrow.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.prev {
+  background-image: url('../images/Left_arrow.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+h1{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 24px;
+  font-weight: 400;
 }
