--- a/src/style/App.css
+++ b/src/style/App.css
@@ -146,3 +146,8 @@ h1{
 .slick-slider {
   z-index: 1; /* ou une autre valeur plus basse */
 }
+
+.more-info-button a {
+  text-decoration: none;
+  color: inherit;
+}
