--- a/src/style/movie.css
+++ b/src/style/movie.css
@@ -13,8 +13,28 @@ body, html {
     padding: 20px;
     background-color: #181818;
     border-radius: 8px;
+    position: relative;
   }
+
+.cover-block {
+  position: absolute;
+  bottom: 320px;
+  left: 50px;
+}
   
+.play-button {
+  font-family: 'Helvetica', sans-serif;
+  font-size: 20px;
+  padding: 10px 20px;
+  border-radius: 4px;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  color: black;
+}
+
   .movie-header {
     display: flex;
     align-items: center;
@@ -53,13 +73,13 @@ body, html {
   }
   
   .movie-stats div {
-    background: #333;
     padding: 5px 10px;
     border-radius: 4px;
   }
   
   .movie-overview {
     line-height: 1.6;
+    width: 500px;
   }
   
   .movie-genres, .movie-companies {
@@ -68,10 +88,73 @@ body, html {
   }
   
   .movie-genres p, .movie-companies p {
-    background-color: #333;
     margin-right: 5px;
     margin-bottom: 5px;
     padding: 5px 10px;
     border-radius: 4px;
   }
-  
+
+.movie-companies {
+  color: rgb(85, 85, 85);
+  display: flex;
+  flex-direction: column;
+}
+
+.companies-list {
+  color: white;
+  margin-top: 5px;
+}
+
+.movie-genres {
+  color: rgb(85, 85, 85);
+}
+
+.genre-list {
+  color: white;
+  margin-top: 5px;
+}
+
+.recommandation {
+  color: rgb(0, 189, 0);
+  font-weight: 800;
+}
+
+.check-button {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: transparent;
+  border: none;
+  color: white;
+  margin-top: 10px;
+}
+
+.check-icon {
+  fill: rgb(188, 188, 188);
+}
+
+.like-button {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: transparent;
+  border: 2px solid #BCBCBC;
+  color: #BCBCBC;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.like-icon {
+  fill: rgb(188, 188, 188);
+  width: 70px;
+  height: 70px;
+  margin-top: 15px;
+}
+
+.buttons-block {
+  display: flex;
+  justify-content: flex-start; 
+  align-items: center; 
+  gap: 10px;
+}
